tests/neg/operators/test-bad-00.ts
/*@ foo :: () => number */
function foo()
{
  var x = 0;
  var y = x + 1;
  assert(10 < y);
  return y
}


